Fix a layout issue in chrome.

--- a/django_olcc/static/css/style.css
+++ b/django_olcc/static/css/style.css
@@ -569,8 +569,6 @@ fieldset .errorlist {
 }
 
 #next-price {
-    position: relative;
-    left: 15px;
     padding:  5px 10px;
     border-bottom: 1px solid #dadfe1;
 }
